--- a/themes/expo-christmas.css
+++ b/themes/expo-christmas.css
@@ -18,6 +18,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 600px;
+  height: 200px;
   background: url('https://images2.imgbox.com/79/19/s7JwNgUb_o.png') no-repeat center top;
   background-size: contain;
   z-index: 1;
