--- a/themes/expo-christmas.css
+++ b/themes/expo-christmas.css
@@ -31,7 +31,7 @@
 
 .expo-christmas-container {
   position: relative;
-  padding: 20px 40px;
+  padding: 100px 40px 20px;
   text-align: justify;
   font-size: 14px;
   line-height: 1.5;
