--- a/themes/Aeson-crows.css
+++ b/themes/Aeson-crows.css
@@ -40,3 +40,11 @@
   margin-top: -2px;
   z-index: 1;
 }
+
+.nacho-credit {
+  font-size: 10px;
+  color: #aaa;
+  text-align: center;
+  margin-top: -20px;
+  font-family: Poppins, sans-serif;
+}
