--- a/themes/aeson-crows.css
+++ b/themes/aeson-crows.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-.aeson-crows-container {
-  width: 720px;
-  margin: 0 auto;
-  position: relative;
-  overflow: visible;
-}
-
 .aeson-crows-wrapper {
   width: 440px;
   padding: 25px;
@@ -15,6 +8,7 @@
   position: relative;
   margin: 0 auto;
   box-sizing: border-box;
+  overflow: visible;
 }
 
 .aeson-crows-text {
@@ -37,12 +31,14 @@
 
 .aeson-crows-image {
   position: absolute;
-  left: 0;
-  bottom: -2px;
+  left: 50%;
+  transform: translateX(-50%);
   width: 720px;
   height: 1000px;
   background: url('https://images2.imgbox.com/6e/be/iQn0Ns7b_o.png') no-repeat center bottom;
   background-size: cover;
+  top: 100%;
+  margin-top: -2px;
   z-index: 1;
   pointer-events: none;
 }
