--- a/themes/manon-sword.css
+++ b/themes/manon-sword.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
-.manon-sword-wrapper {
+.rouge-1-wrapper {
   max-width: 850px;
   margin: 0 auto;
   padding: 15px;
@@ -8,7 +8,7 @@
   overflow: hidden;
 }
 
-.manon-sword-flex {
+.rouge-1-flex {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
@@ -16,42 +16,7 @@
   position: relative;
 }
 
-.manon-sword-textbox {
-  flex: 1;
-  min-width: 300px;
-  min-height: 350px;
-  background-color: #17090b;
-  border: 5px solid #cc5500;
-  padding: 15px;
-  margin-right: -50px;
-  position: relative;
-  z-index: 0;
-  box-sizing: border-box;
-}
-
-.manon-sword-inner {
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-  border-top: none;
-  border-bottom: none;
-  border-width: 2px;
-  border-style: solid;
-  border-image: linear-gradient(transparent 0%, #cc5500 50%, transparent 100%) 1;
-  padding: 10px;
-  font-family: 'Raleway', sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
-  text-align: justify;
-  color: #ffffff;
-  text-shadow: 1px 1px 1px #000;
-}
-
-.manon-sword-inner b {
-  color: #cc5500;
-  font-weight: bold;
-}
-
-.manon-sword-image {
+.rouge-1-image {
   min-width: 300px;
   max-width: 450px;
   flex: 1;
@@ -59,7 +24,7 @@
   z-index: 1;
 }
 
-.manon-sword-image img {
+.rouge-1-image img {
   width: 100%;
   height: auto;
   object-fit: cover;
@@ -67,9 +32,42 @@
   margin-bottom: -50px;
 }
 
-.manon-sword-credit {
+.rouge-1-textbox {
+  flex: 1;
+  min-width: 300px;
+  min-height: 350px;
+  background-color: #0d0d0d;
+  border: 5px solid #39ff14;
+  padding: 15px;
+  margin-left: -50px;
+  position: relative;
+  z-index: 0;
+  box-sizing: border-box;
+}
+
+.rouge-1-inner {
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(transparent 0%, #39ff14 50%, transparent 100%) 1;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: justify;
+  color: #f1f1f1;
+  text-shadow: 1px 1px 1px #000;
+}
+
+.rouge-1-inner b {
+  color: #39ff14;
+  font-weight: bold;
+}
+
+.rouge-1-credit {
   font-size: 10px;
   text-align: center;
   margin-top: 10px;
-  color: #888;
+  color: #666;
 }
