--- a/themes/expo-1.css
+++ b/themes/expo-1.css
@@ -47,12 +47,13 @@
 }
 
 .expo-1-inner {
+  margin: 10px;
+  padding: 15px;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
   border-width: 2px;
   border-style: solid;
   border-image: linear-gradient(transparent 0%, #81e6d9 50%, transparent 100%) 1;
-  padding: 25px;
   font-family: 'Raleway', sans-serif;
   font-size: 14px;
   line-height: 1.5;
