--- a/themes/expo-2.css
+++ b/themes/expo-2.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding: 20px 20px 250px 20px;
   border: 3px solid #682860;
-  border-radius: 0 300px 0 0;
+  border-radius: 0 0 0 300px;
   background-color: #461d26;
   background-image: url('https://images2.imgbox.com/c5/8f/EYEQql4e_o.png');
   background-repeat: no-repeat;
