--- a/themes/expo-eyes.css
+++ b/themes/expo-eyes.css
@@ -3,12 +3,13 @@
 .expo-eyes-wrapper {
   width: 550px;
   margin: 0 auto;
-  padding: 20px 20px 550px 20px;
-  background-color: #ff5b80;
+  padding: 20px 20px 250px 20px;
+  background-color: #000;
   background-image: url('https://images2.imgbox.com/b8/3c/96ccwzBh_o.png');
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: 550px auto;
+  border-radius: 0 0 300px 300px;
   box-sizing: border-box;
   position: relative;
   border-style: solid;
@@ -30,7 +31,7 @@
   font-size: 14px;
   line-height: 150%;
   font-family: Poppins, sans-serif;
-  color: #ffffff;
+  color: #000;
 }
 
 .expo-eyes-inner b {
