--- a/themes/expo-eyes.css
+++ b/themes/expo-eyes.css
@@ -4,7 +4,7 @@
   width: 550px;
   margin: 0 auto;
   padding: 20px 20px 250px 20px;
-  background-color: #000;
+  background-color: #fff;
   background-image: url('https://images2.imgbox.com/b8/3c/96ccwzBh_o.png');
   background-repeat: no-repeat;
   background-position: center bottom;
@@ -14,7 +14,7 @@
   position: relative;
   border-style: solid;
   border-width: 3px;
-  border-color: #ffd184;
+  border-color: #800000;
   border-radius: 0;
 }
 
@@ -25,7 +25,7 @@
   border-right: 1px solid transparent;
   border-top: none;
   border-bottom: none;
-  border-image: linear-gradient(transparent 0%, #ffd184 50%, transparent 100%) 1;
+  border-image: linear-gradient(transparent 0%, #800000 50%, transparent 100%) 1;
   padding: 20px;
   text-align: justify;
   font-size: 14px;
