--- a/themes/expo-3.css
+++ b/themes/expo-3.css
@@ -7,6 +7,7 @@
   background-image: url('https://images2.imgbox.com/c4/8b/Gb0vVngD_o.png');
   background-color: #100406;
   background-position: center top;
+  background-size: 600px auto;
   border: 3px solid #4d050a;
   border-radius: 300px 0 0 0;
   box-sizing: border-box;
