--- a/themes/rouge-2.css
+++ b/themes/rouge-2.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding: 20px 20px 500px 20px;
   background-color: #1d0408;
-  background-image: url('https://images2.imgbox.com/c4/8b/Gb0vVngD_o.png');
+  background-image: url('https://images2.imgbox.com/56/3b/b4YnLNkD_o.png');
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: 600px auto;
