--- a/themes/mercy-1.css
+++ b/themes/mercy-1.css
@@ -9,7 +9,7 @@
 .mercy-1-image {
   width: 100%;
   height: 450px;
-  background: url('https://images2.imgbox.com/9c/1b/C1M5N8AL_o.png') no-repeat center top;
+  background: url('https://i.imgur.com/mX6g3GQ.png') no-repeat center top;
   background-size: contain;
 }
 
