--- a/themes/mercy-2.css
+++ b/themes/mercy-2.css
@@ -1,40 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
 .mercy-2-wrapper {
-  width: 580px;
+  max-width: 850px;
   margin: 0 auto;
-  background-color: #f4f1eb;
-  border: 2px solid #8a7563;
+  padding: 15px;
   box-sizing: border-box;
-  font-family: 'Special Elite', serif;
-  color: #3a2c2a;
+  overflow: hidden;
 }
 
-.mercy-2-image {
-  background-image: url('https://i.imgur.com/FfUPGWF.png');
-  background-size: cover;
-  background-position: right center;
-  height: 250px;
-  border-bottom: 2px solid #8a7563;
+.mercy-2-flex {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  gap: 10px;
+  position: relative;
+}
+
+.mercy-2-textbox {
+  flex: 1;
+  min-width: 300px;
+  min-height: 350px;
+  background-color: #f4f1eb;
+  border: 5px solid #735245;
+  padding: 20px;
+  margin-left: -50px;
+  position: relative;
+  z-index: 0;
+  box-sizing: border-box;
+  box-shadow: 0 0 10px #73524555;
 }
 
 .mercy-2-inner {
-  padding: 20px;
-  text-align: justify;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(transparent 0%, #735245 50%, transparent 100%) 1;
+  padding: 15px;
+  margin: 5px;
+  font-family: 'Special Elite', serif;
   font-size: 14px;
-  line-height: 160%;
-  background-color: #e3f8ee;
+  line-height: 1.5;
+  text-align: justify;
+  color: #1d1513;
 }
 
 .mercy-2-inner b {
-  color: #6e3e3e;
+  color: #4e2f26;
   font-weight: bold;
+}
+
+.mercy-2-image {
+  min-width: 300px;
+  max-width: 450px;
+  flex: 1;
+  position: relative;
+  z-index: 1;
+}
+
+.mercy-2-image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  margin-bottom: -50px;
+  border-radius: 10px;
+  box-shadow: 0 0 12px #73524588;
 }
 
 .mercy-2-credit {
   font-size: 10px;
-  font-family: 'Special Elite', serif;
   text-align: center;
-  color: #999;
-  margin-top: 6px;
+  margin-top: 10px;
+  font-family: 'Special Elite', serif;
+  color: #888;
 }
