--- a/themes/mercy-2.css
+++ b/themes/mercy-2.css
@@ -5,7 +5,6 @@
   margin: 0 auto;
   padding: 15px;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .mercy-2-flex {
@@ -23,7 +22,7 @@
   background-color: #f4f1eb;
   border: 5px solid #735245;
   padding: 20px;
-  margin-left: -50px;
+  margin-right: -50px;
   position: relative;
   z-index: 0;
   box-sizing: border-box;
