--- a/themes/ursus-moon2.css
+++ b/themes/ursus-moon2.css
@@ -8,29 +8,31 @@
 }
 
 .ursus-moon2-container {
-  background-color: #1e1e1e;
+  background-color: #1a1a1a;
   border: 3px solid #a73131;
   border-radius: 0 0 300px 300px;
   overflow: hidden;
   position: relative;
-  padding: 30px 25px 300px 25px; /* bottom reserved for image */
-  box-shadow: 0 0 10px #a7313188;
+  padding: 50px 30px 330px 30px; /* top/bottom spacing */
+  box-shadow: 0 0 12px #a7313170;
+  box-sizing: border-box;
 }
 
 .ursus-moon2-inner {
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
+  border-width: 2px;
   border-style: solid;
-  border-width: 0 1px;
   border-image: linear-gradient(transparent 0%, #a73131 50%, transparent 100%) 1;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 1.6;
   text-align: justify;
   color: #f8f8f8;
+  padding: 10px;
 }
 
 .ursus-moon2-inner b {
-  color: #e05555;
+  color: #ff5959;
   font-weight: bold;
 }
 
@@ -39,18 +41,23 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 600px;
-  height: 300px;
-  background: url('https://images2.imgbox.com/1e/37/Hd2DYQv4_o.png') no-repeat center bottom;
-  background-size: contain;
+  width: 100%;
+  max-width: 500px;
+  height: auto;
   pointer-events: none;
-  z-index: 1;
+  z-index: 2;
+}
+
+.ursus-moon2-image img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 .ursus-moon2-credit {
   font-size: 10px;
   text-align: center;
-  margin-top: 6px;
-  color: #aaa;
+  margin-top: 10px;
   font-family: 'Special Elite', serif;
+  color: #888;
 }
