--- a/themes/mercy-3.css
+++ b/themes/mercy-3.css
@@ -28,8 +28,10 @@
 }
 
 .mercy-3-image img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 300px;
   height: auto;
+  width: auto;
   object-fit: contain;
   display: block;
 }
