--- a/themes/mercy-3.css
+++ b/themes/mercy-3.css
@@ -6,45 +6,43 @@
   padding: 15px;
   box-sizing: border-box;
   overflow: hidden;
-  background-color: #1d0f0f;
-  border: 3px solid #731c1c;
-  box-shadow: 0 0 10px rgba(115, 28, 28, 0.6);
 }
 
 .mercy-3-flex {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-end;
   gap: 10px;
   position: relative;
 }
 
 .mercy-3-image {
-  min-width: 200px;
-  max-width: 300px;
+  min-width: 300px;
+  max-width: 450px;
   flex: 1;
   position: relative;
   z-index: 1;
 }
 
 .mercy-3-image img {
-  max-width: 100%;
-  max-height: 300px;
+  width: 100%;
   height: auto;
-  width: auto;
-  object-fit: contain;
+  object-fit: cover;
   display: block;
+  margin-bottom: -50px;
 }
 
 .mercy-3-textbox {
-  flex: 2;
+  flex: 1;
   min-width: 300px;
-  background-color: #2a1212;
-  border: 2px solid #a03c3c;
-  padding: 20px;
+  min-height: 350px;
+  background-color: #220d0d;
+  border: 5px solid #c74c4c;
+  padding: 15px;
+  margin-left: -50px;
+  position: relative;
+  z-index: 0;
   box-sizing: border-box;
-  color: #f8e7e7;
-  font-family: 'Quicksand', sans-serif;
 }
 
 .mercy-3-inner {
@@ -52,22 +50,25 @@
   border-right: 1px solid transparent;
   border-width: 2px;
   border-style: solid;
-  border-image: linear-gradient(transparent 0%, #ff9999 50%, transparent 100%) 1;
+  border-image: linear-gradient(transparent 0%, #c74c4c 50%, transparent 100%) 1;
   padding: 10px;
+  font-family: 'Quicksand', sans-serif;
   font-size: 14px;
-  line-height: 1.6;
+  line-height: 1.5;
   text-align: justify;
+  color: #f8f3f3;
+  text-shadow: 1px 1px 1px #000;
 }
 
 .mercy-3-inner b {
-  color: #ff9999;
-  font-weight: 700;
+  color: #ff6a6a;
+  font-weight: bold;
 }
 
 .mercy-3-credit {
   font-size: 10px;
   text-align: center;
   margin-top: 10px;
-  color: #bbb;
+  color: #888;
   font-family: 'Quicksand', sans-serif;
 }
