--- a/themes/mercy-3.css
+++ b/themes/mercy-3.css
@@ -39,7 +39,7 @@
   background-color: #220d0d;
   border: 5px solid #c74c4c;
   padding: 15px;
-  margin-right: -50px;
+  margin-left: -75px;
   position: relative;
   z-index: 0;
   box-sizing: border-box;
