--- a/themes/senua-1.css
+++ b/themes/senua-1.css
@@ -9,7 +9,7 @@
   background-position: center top;
   background-size: 600px auto;
   border: 3px solid #2e2c2a;
-  border-radius: 300px 0 0 0;
+  border-radius: 0 300px 0 0;
   box-sizing: border-box;
   position: relative;
 }
