--- a/themes/senua-1.css
+++ b/themes/senua-1.css
@@ -7,6 +7,7 @@
   background-image: url('https://images2.imgbox.com/de/56/CyIXN0re_o.png');
   background-color: #040501;
   background-position: center top;
+  background-repeat: no-repeat;
   background-size: 600px auto;
   border: 3px solid #2e2c2a;
   border-radius: 0 300px 0 0;
