--- a/themes/bjorn-lumi1.css
+++ b/themes/bjorn-lumi1.css
@@ -1,46 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
 .bjorn-lumi-1-wrapper {
-  width: 500px;
+  width: 600px;
   margin: 0 auto;
+  padding: 20px 20px 450px 20px;
   background-color: #0a0621;
-  border: 3px solid #3a395f;
+  background-image: url('https://images2.imgbox.com/3f/56/L5tqv2j8_o.png');
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 600px auto;
+  border: 3px solid #6aa6c8;
   border-radius: 0 0 300px 300px;
   box-sizing: border-box;
   position: relative;
-  overflow: hidden;
-}
-
-.bjorn-lumi-1-arch {
-  width: 100%;
-  height: 500px;
-  background: url('https://images2.imgbox.com/3f/56/L5tqv2j8_o.png') no-repeat center bottom;
-  background-size: cover;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  pointer-events: none;
-  z-index: 1;
 }
 
 .bjorn-lumi-1-inner {
-  position: relative;
-  z-index: 2;
-  padding: 300px 25px 25px 25px;
+  padding: 20px;
   text-align: justify;
-  font-family: 'Special Elite', serif;
   font-size: 14px;
-  line-height: 1.5;
-  color: #f0f0ff;
+  line-height: 150%;
+  font-family: 'Special Elite', serif;
+  color: #ffffff;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
-  border-image: linear-gradient(transparent 0%, #6fc2e6 50%, transparent 100%) 1;
   border-style: solid;
   border-width: 0 1px;
+  border-image: linear-gradient(transparent 0%, #6aa6c8 50%, transparent 100%) 1;
 }
 
 .bjorn-lumi-1-inner b {
-  color: #a7e0ff;
+  color: #6aa6c8;
   font-weight: bold;
 }
 
