--- a/themes/bjorn-lumi1.css
+++ b/themes/bjorn-lumi1.css
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: 600px auto;
-  border: 3px solid #6aa6c8;
+  border: 3px solid #63b3ed;
   border-radius: 0 0 300px 300px;
   box-sizing: border-box;
   position: relative;
@@ -21,16 +21,16 @@
   font-size: 14px;
   line-height: 150%;
   font-family: 'Special Elite', serif;
-  color: #ffffff;
+  color: #e0f8ff;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
   border-style: solid;
   border-width: 0 1px;
-  border-image: linear-gradient(transparent 0%, #6aa6c8 50%, transparent 100%) 1;
+  border-image: linear-gradient(transparent 0%, #63b3ed 50%, transparent 100%) 1;
 }
 
 .bjorn-lumi-1-inner b {
-  color: #6aa6c8;
+  color: #63b3ed;
   font-weight: bold;
 }
 
@@ -38,6 +38,6 @@
   text-align: center;
   font-size: 10px;
   font-family: 'Special Elite', serif;
-  color: #aaa;
+  color: #888;
   margin-top: 6px;
 }
