--- a/themes/bjorn-lumi1.css
+++ b/themes/bjorn-lumi1.css
@@ -3,7 +3,7 @@
 .bjorn-lumi-1-wrapper {
   width: 600px;
   margin: 0 auto;
-  padding: 20px 20px 450px 20px;
+  padding: 20px 20px 550px 20px;
   background-color: #0a0621;
   background-image: url('https://images2.imgbox.com/3f/56/L5tqv2j8_o.png');
   background-repeat: no-repeat;
@@ -22,6 +22,7 @@
   line-height: 150%;
   font-family: 'Special Elite', serif;
   color: #e0f8ff;
+  background-color: rgba(10, 6, 33, 0.75);
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
   border-style: solid;
