--- a/themes/mags-davey1.css
+++ b/themes/mags-davey1.css
@@ -4,18 +4,23 @@
   width: 600px;
   margin: 0 auto;
   text-align: center;
+  overflow: hidden; 
+  position: relative;
 }
 
-.mags-davey1-img {
+.mags-davey1-container {
   width: 600px;
-  margin-left: -25px;
-  display: block;
+  margin: 0 auto;
+  text-align: center;
+  overflow: hidden; /* ensures float containment */
+  position: relative;
 }
 
 .mags-davey1-text {
+  clear: both;
   width: 65%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 30px 20px 20px 20px;
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   line-height: 1.6;
