--- a/themes/sidkana-2.css
+++ b/themes/sidkana-2.css
@@ -2,9 +2,9 @@
 
 .sidkana-2-wrapper {
   width: 500px;
-  border: 3px solid #7d4a91;
+  border: 3px solid #e4007c;
   border-radius: 0 0 300px 300px;
-  background-color: rgba(61, 102, 130, 0.85);
+  background-color: #ffb6c1;
   position: relative;
   margin: 0 auto;
   box-sizing: border-box;
