--- a/themes/sidkana-2.css
+++ b/themes/sidkana-2.css
@@ -39,6 +39,7 @@
   line-height: 1.5;
   font-family: 'Special Elite', serif;
   color: #f5faff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   background-color: transparent;
   z-index: 1;
 }
