--- a/themes/sidkana-2.css
+++ b/themes/sidkana-2.css
@@ -4,7 +4,7 @@
   width: 500px;
   border: 3px solid #e4007c;
   border-radius: 0 0 300px 300px;
-  background-color: #ffb6c1;
+  background-color: #3b1c30;
   position: relative;
   margin: 0 auto;
   box-sizing: border-box;
