--- a/themes/sidkana-2.css
+++ b/themes/sidkana-2.css
@@ -40,7 +40,7 @@
   font-family: 'Special Elite', serif;
   color: #f5faff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.1);
   z-index: 1;
 }
 
