--- a/themes/sidkana-2.css
+++ b/themes/sidkana-2.css
@@ -4,7 +4,7 @@
   width: 500px;
   border: 3px solid #e4007c;
   border-radius: 0 0 300px 300px;
-  background-color: #3b1c30;
+  background-color: #ffc0cb;
   position: relative;
   margin: 0 auto;
   box-sizing: border-box;
@@ -33,7 +33,7 @@
 
 .sidkana-2-container {
   position: relative;
-  padding: 40px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
   text-align: justify;
   font-size: 18px;
   line-height: 1.5;
