--- a/themes/sidkana-2.css
+++ b/themes/sidkana-2.css
@@ -9,7 +9,7 @@
   margin: 0 auto;
   box-sizing: border-box;
   overflow: hidden;
-  padding-top: 5px; /* 5px gap above image */
+  padding-top: 20px;
 }
 
 .sidkana-2-fade {
