--- a/themes/mochi-rott2.css
+++ b/themes/mochi-rott2.css
@@ -13,7 +13,7 @@
   --panel-bot: #0b0c12;
   --ink: #cfd3dc;
   --muted: #aab0be;
-  --frame: #1d2951;
+  --frame: #480607;
   --spine: #480607;
   --accent: #b22222;
 }
@@ -50,7 +50,7 @@
   font-size: 16px;
   text-align: justify;
   color: var(--ink);
-  text-shadow: 1px 1px 2px #fff;
+  text-shadow: 1px 1px 2px #000;
   line-height: 1.6;
 }
 
