--- a/themes/PumpKen25.css
+++ b/themes/PumpKen25.css
@@ -4,7 +4,7 @@
   width: 600px;
   padding: 24px 24px 340px 24px;
   border: 5px solid #ff7518;
-  border-radius: 0 0 300px 0;
+  border-radius: 0 0 300px 300px;
   background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/109596238_TjP56jhpYtMX5Zy.png') no-repeat center bottom;
   background-size: 600px auto;
   background-color: #121A21;
